# calendar-ipynb

./: .gitignore  README.md  fahim-preferences.json  pyproject.toml
calendar_ipynb/: __init__.py  debug.ipynb  duplicate_recurring_tasks.ipynb  event_renamer.ipynb  events.py  events_incremental.py  google_oauth.py  main.ipynb  meta.py  productivity.ipynb  sleep_events.py  today.ipynb  utils.py
calendar_ipynb/ipywidgets/: bargraph_grouped_by_day.py  calendar_selection.py  date_range_selection.py  piechart.py
calendar_ipynb/ipywidgets/productivity_ipynb/: productivity_60d_v_90d_avg.py  productivity_bargraph_grouped_by_day.py  productivity_category_piechart.py  productivity_heatmap_hourly.py  productivity_project_heatmap.py
calendar_ipynb/ipywidgets/today_ipynb/: pie_productive.py
